--- a/src/app/components/contact-search-modal/contact-search-modal.component.html
+++ b/src/app/components/contact-search-modal/contact-search-modal.component.html
@@ -16,7 +16,7 @@
 				   cancelButtonText="Cancel"
 				   [debounce]="debounce"
 				   (ionCancel)="onCancelSearch($event)"
-				   (ionInput)="onSearchChange($event)">
+				   (ionInput)="onSearchChange()">
 	</ion-searchbar>
 	<ion-list>
 		<ion-item>
