--- a/src/app/components/customer-pbx-info/customer-pbx-info.component.html
+++ b/src/app/components/customer-pbx-info/customer-pbx-info.component.html
@@ -19,9 +19,9 @@
         </ion-card-content>
     </ion-card>
     <p class="text-center">
-        <button ion-button icon-start color="danger" (click)="close()" *ngIf="!showProgress">
+        <ion-button icon-start color="danger" (click)="close()">
             <ion-icon name="close-circle"></ion-icon>
             Close
-        </button>
+        </ion-button>
     </p>
 </ion-content>
