--- a/src/app/pages/netcast-search/netcast-search.page.html
+++ b/src/app/pages/netcast-search/netcast-search.page.html
@@ -61,7 +61,7 @@
                                   <app-show-form-errors [control]="searchForm.get('searchType')"></app-show-form-errors>
                               </ion-item>
                             </ion-list>
-                            <ion-button (click)="searchByKeyword($event)">Find Netcasts</ion-button>
+                            <ion-button (click)="searchByKeyword()">Find Netcasts</ion-button>
                       </form>
                   </ion-card-content>
               </ion-card>
